# lenet_excercise

./: CMakeLists.txt  README.md  main.cpp
ai_tech_challenge/: README.md  lenet.json
include/Array/: Array2D.cpp  Array2D.h  Array3D.cpp  Array3D.h
include/Math/: maths_image.h  maths_vector.h
model/: leNet.cpp  leNet.h
python/: main.py  model.py
